# docker_rash

./: Cargo.toml  LICENSE  README.md
assets/: whale.txt
src/: api_models.rs  app.rs  components.rs  docker.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs  types.rs  ui.rs
src/components/: background.rs  page.rs  sidebar.rs
src/docker/: api.rs  curl_lib.rs  errors.rs  models.rs  types.rs
