[package]
name = "docker-rash"
version = "0.1.0"
authors = ["horvatda"]
edition = "2021"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"